--- a/deny.toml
+++ b/deny.toml
@@ -8,6 +8,14 @@ ignore = [
     # Waiting for https://github.com/chronotope/chrono/pull/578
     "RUSTSEC-2020-0071",
     "RUSTSEC-2020-0159",
+    # Temporarily ignore: vulnerability handled as part of
+    # https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/602
+    # and
+    # https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/603
+    # but the tokio fork used in threadshare is based on an earlier version
+    # which prevents cargo-deny from assuming that the vulnerability is fixed.
+    # See https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/604
+    "RUSTSEC-2021-0124",
 ]
 
 [licenses]
